--- a/web/self_checkin/index.html
+++ b/web/self_checkin/index.html
@@ -15,6 +15,7 @@
   <body>
     <main>
       <header>
+        <img id="logo" class="logo" alt="Iclectic logo" />
         <div class="badge" id="event-badge">Event check-in</div>
         <h1 id="page-title">Event check-in</h1>
         <p id="page-subtitle">
